fixing tooltip on ios

--- a/css/site.css
+++ b/css/site.css
@@ -994,6 +994,8 @@ input[type="checkbox"].SwitcherFormElement:checked + div > div {
     border: 1px solid black;
     padding: 15px;
     font-size: 16px;
+    border-radius: 15px;
+    text-indent: 0px;
 }
 
 .tooltip {
